[package]
name = "prax-sqlite"
version = "0.6.3"
edition = "2024"
authors = ["Pegasus Heavy Industries LLC"]
description = "SQLite database driver for Prax ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/prax-orm"
keywords = ["orm", "sqlite", "database", "async"]
categories = ["database", "asynchronous"]
rust-version = "1.85"

[dependencies]
prax-query = { path = "../prax-query", version = "0.6.3" }

# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
futures = { workspace = true }
async-trait = { workspace = true }

# SQLite driver
tokio-rusqlite = { workspace = true }
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true, features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "sqlite_operations"
harness = false

[features]
default = []
bundled = ["rusqlite/bundled"]
