[package]
name = "prax-sqlite"
version.workspace = true
edition = "2024"
authors = ["Joseph Quinn <quinn.josephr@protonmail.com>"]
description = "SQLite database driver for Prax ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinnjr/prax"
keywords = ["orm", "sqlite", "database", "async"]
categories = ["database", "asynchronous"]
rust-version = "1.85"

[dependencies]
prax-query.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
futures = { workspace = true }
async-trait = { workspace = true }

# SQLite driver
tokio-rusqlite = { workspace = true }
rusqlite = { workspace = true }
sqlite-vector-rs = { workspace = true, optional = true, features = ["library"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true, features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Decimal
rust_decimal = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "sqlite_operations"
harness = false

[[example]]
name = "vector_rag"
required-features = ["vector"]

[features]
default = []
bundled = ["rusqlite/bundled"]
vector = ["dep:sqlite-vector-rs"]
